-Fixed modal gallery responsibility issues
-Fixed modal gallery responsibility issues (images were not showing correctly on small devices)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -294,8 +294,7 @@ float:left;
 #modalimg {
   margin: auto;
   display: block;
-  max-width: 80%;
-  max-width: 800px;
+  max-width: 100%;
   max-height: 100%;
   position: absolute;
   top: 0; bottom: 0; left: 0; right: 0;
